fix layout issues

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,6 @@
 #contact {
   justify-content: center;
   position: relative;
-  padding: 1rem;
 }
 
 .contact-container {
